# Wordle-C-Terminal-Version-

./: .gitignore  CMakeLists.txt  ReadMe.md  run.bat
include/: Game.hpp  InputHandler.hpp  Renderer.hpp  Utils.hpp  WordList.hpp
src/: Game.cpp  InputHandler.cpp  Renderer.cpp  Utils.cpp  WordList.cpp
words/: words.txt
